hover on mobile fixed

--- a/src/components/Form/CheckBox/CheckBox.module.scss
+++ b/src/components/Form/CheckBox/CheckBox.module.scss
@@ -9,12 +9,14 @@ $checkbox-size-mobile: 3vw;
    font-size: 22px;
    font-family: "Aparajita", "Sylfaen", Times;
 
-   &:hover {
-      filter: brightness(1.2);
+   @media screen and (min-width: 670px) {
+      &:hover {
+         filter: brightness(1.2);
 
-      input::after {
-         visibility: visible;
-         opacity: 0.7;
+         input::after {
+            visibility: visible;
+            opacity: 0.7;
+         }
       }
    }
 }
